<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="DuplicateDefinition,ResourceName">
    <string name="mine_helper_center_url">http://mkitty.dev.cocosbcx.net/helpcenter</string>
    <string name="home_level_url">http://mkitty.dev.cocosbcx.net/rankinglist</string>
    <string name="home_guid_url">http://mkitty.dev.cocosbcx.net/howplay</string>
    <string name="invite_history_url">http://mkitty.dev.cocosbcx.net/invitationrecord</string>
    <string name="home_image_share_url">http://mkitty.dev.cocosbcx.net/illustratedhandbook</string>
    <string name="scan_title">扫一扫</string>
    <string name="scan_desc">将二维码放入框内，即可自动扫描</string>
    <string name="module_zxing_failure_of_permission_application">权限申请失败</string>
    <string name="module_zxing_barcode_not_found">未发现二维码</string>
    <string name="day_text">天</string>
    <string name="main_tab_home">旅行</string>
    <string name="main_tab_travel">亲友团</string>
    <string name="main_tab_bonus">悬赏</string>
    <string name="main_tab_mine">我</string>
    <string name="home_image_share">图鉴</string>
    <string name="home_reposity_text">仓库</string>
    <string name="activity_repertory_title">仓库</string>
    <string name="activity_repertory_level">等级</string>
    <string name="activity_repertory_name">名称</string>
    <string name="activity_repertory_stored">已存入仓库</string>
    <string name="activity_repertory_tip">拖动猫放入仓库</string>
    <string name="activity_repertory_draw">取出</string>
    <string name="add_to_repertory_tip">确定存入仓库？</string>
    <string name="confirm">确定</string>
    <string name="add_to_repertory_warning">存入仓库的猫不产生金币</string>
    <string name="goog_to_gain">恭喜获得</string>
    <string name="ten_box_text">10倍宝箱</string>
    <string name="treasure_box_ten_tip">发财啦，下次抽奖金翻十倍</string>
    <string name="watch_vidio_get">看视频领取</string>
    <string name="treasure_vidio_tips">每天0点,12点,20点重置视频次数（剩余12次）</string>
    <string name="ratate_coupon_title">兑换转盘券</string>
    <string name="ratate_coupon_tip">观看视频立即获得5张转盘券</string>
    <string name="turnplate_coupon_count">转盘券x</string>
    <string name="turnpalte_coupon_tip">消耗完每天凌晨赠送3张转盘券</string>
    <string name="turnpalte_coupon_tip_front">消耗完每天凌晨赠送</string>
    <string name="turnpalte_coupon_tip_end">张转盘券</string>
    <string name="start_text">开始</string>
    <string name="turnplate_get_coupon">领券</string>
    <string name="home_get_bonus">领取</string>
    <string name="home_level_text">排行榜</string>
    <string name="home_guid_text">怎么玩</string>
    <string name="home_lucky_turn_text">幸运转盘</string>
    <string name="home_bonus_tips">招财猫今天收益</string>
    <string name="wx_login">微信登录</string>
    <string name="system_exit">再按一次退出</string>
    <string name="recycle_price_title">回收价格</string>
    <string name="confirm_recycle">确认回收</string>
    <string name="activity_repertory_expansion">扩容</string>
    <string name="kitty_home_capacity_text">容量</string>
    <string name="position_filled">位置已满</string>
    <string name="max_capacity">已经是最大容量</string>
    <string name="lack_coin">缺少金币</string>
    <string name="unknow_fail">未知错误</string>
    <string name="draw_tip">请选择要取出的猫</string>
    <string name="buy_repertory_title">购买仓库容量x1</string>
    <string name="name_coin">金币</string>
    <string name="friend_count">好友人数：</string>
    <string name="default_friend_count">好友人数：</string>
    <string name="invit">邀请好友</string>
    <string name="total_bonus">累计总收益：</string>
    <string name="added_profit">好友累计给我赚钱</string>
    <string name="paly_rule">玩法规则 ></string>
    <string name="current_total_profit">当前阶段总收入</string>
    <string name="once_total_profit">第一阶段x1.0倍加速</string>
    <string name="added_bottom_text">已解锁0.00%，解锁后20.00元现金将自动存入钱包</string>
    <string name="today_profit_from_friends">今日好友给我赚钱</string>
    <string name="my_inviter">我的邀请人</string>
    <string name="contact_inviter"><![CDATA[联系Ta >]]></string>
    <string name="invite_total_info">他邀请了12人，累计收益0.00元</string>
    <string name="total_profit">总收益</string>
    <string name="expand_profit">扩散好友贡献</string>
    <string name="instant_friend_profit">直邀好友贡献</string>
    <string name="total_friend_profit_tips_content"><![CDATA[亲友团的收入来源于好友活跃收益。好友活跃收益：根据直邀好友、扩散好友的[活跃时长]、[看视频贡献比例]、[邀请好友数]等因素综合计算，直邀好友，扩散好友越多，每天坐享活跃收益越多：1个直邀好友=2个扩散好友]]></string>
    <string name="total_friend_profit_tips_title">当前总收益说明</string>
    <string name="state_profit_tips_content">1. 阶段目标达成后，资金将划入钱包，可提现；\n2. 所处的阶段越高，额外获得收益越多，当前收益=好友活跃收益*阶段倍率</string>
    <string name="state_profit_tips_title">阶段目标说明</string>
    <string name="total_profit_tips_title">累计收益说明</string>
    <string name="total_profit_tips_content">累计总收益包括：亲友团收益、阶段性奖励、直邀好友、扩散好友收益等</string>
    <string name="set_invite_info">你还没有邀请人，</string>
    <string name="copy_wx">复制微信号</string>
    <string name="set_invite_info_too">我也要设置社交信息</string>
    <string name="copy_success">复制成功</string>
    <string name="web_load_failed">页面被外星人带走啦</string>
    <string name="web_reload">刷新页面</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="my_inviter_title">我的邀请人</string>
    <string name="agree_world">同意恋猫世界</string>
    <string name="user_proto">《用户协议》</string>
    <string name="private_proto">《隐私协议》</string>
    <string name="i">i</string>
    <string name="main_sdk_version_tip">SDK Version %1$s</string>
    <string name="mine_message">消息</string>
    <string name="mine_asset">我的钱包</string>
    <string name="mine_invite_code">我的邀请码</string>
    <string name="mine_partner">渠道合伙人</string>
    <string name="mine_helper_center">帮助中心</string>
    <string name="mine_setting">设置</string>
    <string name="mine_tip">天天努力必得招财猫</string>
    <string name="travel_play_rule">玩法规则</string>
    <string name="travel_play_rule_url">http://mkitty.dev.cocosbcx.net/rulesplay</string>
    <string name="login_user_proto_title">恋猫世界服务协议</string>
    <string name="login_user_proto">服务协议</string>
    <string name="login_user_proto_url">http://mkitty.dev.cocosbcx.net/serviceagreement</string>
    <string name="login_privcy_proto">隐私协议</string>
    <string name="login_privcy_proto_title">恋猫世界隐私协议</string>
    <string name="login_privcy_proto_url">http://mkitty.dev.cocosbcx.net/privacyprotocol</string>
    <string name="friend_profit">亲友团收益</string>
    <string name="friend_profit_url">http://mkitty.dev.cocosbcx.net/income</string>
    <string name="invite_history">邀请记录</string>
    <string name="setting_title">设置</string>
    <string name="header_pic_title">头像</string>
    <string name="nick_name_title">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="setting_privcy">隐私</string>
    <string name="bind_pay_bao_title">绑定支付宝账号</string>
    <string name="about_game">关于恋猫世界</string>
    <string name="sound_status">开启音效</string>
    <string name="logout">退出登录</string>
    <string name="privcy_title">隐私</string>
    <string name="set_other_info_title">设置社交信息</string>
    <string name="info_master_visible_tip">开启后，您的师傅可见您的社交信息</string>
    <string name="friend_visible_title">我的直邀好友/扩散好友可见</string>
    <string name="info_friend_visible_tip">开启后，您的好友可看见您的社交信息</string>
    <string name="set_master_visible">我的师傅可见</string>
    <string name="social_info_title">社交信息</string>
    <string name="input_wx_code_hint">请输入您的微信号</string>
    <string name="wx_code">微信号</string>
    <string name="qq_code">QQ号</string>
    <string name="input_qq_code_hint">请输入您的QQ号</string>
    <string name="save_social">保存</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="capacity_to_get">扫一扫二维码</string>
    <string name="set_social_info">请填写您的信息</string>
    <string name="set_social_sucess">设置成功</string>
    <string name="sett_social_failed">设置失败</string>
    <string name="set_inviter_title">你的邀请人</string>
    <string name="input_invite_code">输入邀请码</string>
    <string name="submit">提交</string>
    <string name="inviter_code_is_empty">请输入邀请码</string>
    <string name="inviter_set_success">设置成功</string>
    <string name="recycle_inviter_error">不能循环推荐</string>
    <string name="wx_string">微信</string>
    <string name="wx_cirle">朋友圈</string>
    <string name="save">保存</string>
    <string name="empry_nick_name">请输入昵称</string>
    <string name="message_center_title">消息中心</string>
    <string name="current_banlance">当前余额</string>
    <string name="withdraw_way">提现方式</string>
    <string name="wx">微信</string>
    <string name="alipay">支付宝</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="with_draw_tips">1、按提现金额的3%收手续费；单笔手续费不足0.1元， 按0.1元收取；\n2、首次提现，不收手续费；</string>
    <string name="with_draw_immidite">立即提现</string>
    <string name="asset_deal">明细</string>
    <string name="alipay_author">支付宝授权认证</string>
    <string name="bind_alipay_author_text">为避免机器人作弊，降低全平台的广告收益，请进行支付宝认证。</string>
    <string name="alipay_author_tip_one">1、将会跳转到支付宝APP授权认证</string>
    <string name="alipay_author_tip_two">2、认证的支付宝账号必须已实名认证</string>
    <string name="bind_alipay_author_title">提现认证</string>
    <string name="server_proto">服务协议</string>
    <string name="privacy_proto">隐私协议</string>
    <string name="check_update">检查更新</string>
    <string name="net_status_fail">当前网络状态不佳</string>
    <string name="write_permission_denied">您没有开启相册读取权限</string>
    <string name="web_partner_title">渠道合伙人</string>
    <string name="web_partner_title_url">http://mkitty.dev.cocosbcx.net/partner</string>
    <string name="asset_deal_url">http://mkitty.dev.cocosbcx.net/walletincome</string>
    <string name="get_bonus_success">领取成功</string>
    <string name="copy">复制</string>
    <string name="direct_friend">直邀好友</string>
    <string name="indirect_friend">扩散好友</string>
    <string name="invite_profit_rule">邀请奖励规则</string>
    <string name="invite_rules">1、有效用户定义：完成实名认证的直邀好友/扩散好友的猫猫等级达到四级；\n2、好友活跃收益：根据亲友们的【活跃时长】、【看视频 贡献比例】、【邀请好友数】等因素综合计算，直邀亲友、扩散亲友越多，每天坐享活跃收益越多；\n3、恋猫世界保留本活动的最终解释权，并将严查恶意刷亲友 等虚假邀请行为，一经发现将取消奖励资格；</string>
    <string name="invite_friend">邀请好友</string>
    <string name="my_inviter_code_title">我的邀请码</string>
    <string name="remain_time">剩余时长</string>
    <string name="go_to_adventure">出发去探险</string>
    <string name="adventure_dynamic">探险动态</string>
    <string name="rule">规则</string>
    <string name="adventure_team">探险队</string>
    <string name="check_more_dynimci">查看更多动态</string>
    <string name="adventure_gain">探险收获</string>
    <string name="adventure_may_gain">探险可能获得？</string>
    <string name="my_pat">我的探险队</string>
    <string name="call_back">召回</string>
    <string name="adventure_dynamic_url">http://mkitty.dev.cocosbcx.net/adventuredynamics</string>
    <string name="adventure_rule_url">http://mkitty.dev.cocosbcx.net/ruleexpeditions</string>
    <string name="dialog_adventure_gain_title">探险可获得</string>
    <string name="is_add_to_repertory_tip">是否移至仓库</string>
    <string name="total_power">总体力值：</string>
    <string name="add_power">增加体力</string>
    <string name="over_max_level">购买的等级大于您当前可以购买的等级</string>
    <string name="no_more_position">位置已满，请先合并！</string>
    <string name="adventure_rule">探险规则</string>
    <string name="unit_zhi">只</string>
    <string name="receive_success">领取成功</string>
    <string name="receive">领取</string>
    <string name="out_line_title">离线奖励</string>
    <string name="already_to_gain">已获得</string>
    <string name="update_version">发现新版本</string>
    <string name="app_version">【更新内容】</string>
    <string name="version_name">版本：1.1.5</string>
    <string name="update_time">更新时间：2020-04-30</string>
    <string name="package_size">包大小：11.6M</string>
    <string name="update_desc">更新说明：</string>
    <string name="drawback_author">你已完成提现认证</string>
    <string name="cancel_text">取消</string>
    <string name="experice_text">体验</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="task_level_to_gain">完成邀请好友任务即可获得</string>
    <string name="get_progress_in_task">任务宝箱中查看进度 ></string>
</resources>