<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_dialog_back"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/dp_20"
            android:src="@drawable/gray_close_icon" />

        <ImageView
            android:layout_width="@dimen/dp_74"
            android:layout_height="@dimen/dp_67"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/main_cat_level_one" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_23"
            android:gravity="center_horizontal"
            android:text="@string/ratate_coupon_title"
            android:textColor="@color/dark"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center_horizontal"
            android:text="@string/ratate_coupon_tip"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_14"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_watch_vidio_get"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_47"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_47"
            android:background="@drawable/activity_repertory_draw"
            android:gravity="center"
            android:text="@string/watch_vidio_get"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/dp_46"
            android:text="@string/treasure_vidio_tips"
            android:textColor="@color/color_999990"
            android:textSize="@dimen/sp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>

</LinearLayout>