<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_dialog_back"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:src="@drawable/gray_close_icon" />

        <FrameLayout
            android:layout_width="@dimen/dp_170"
            android:layout_height="@dimen/dp_140">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_9"
                android:background="@drawable/experice_back"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/experice_text"
                android:textColor="@color/color_FF5E6E"
                android:textSize="@dimen/sp_12" />

            <ImageView
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_140"
                android:layout_gravity="center"
                android:src="@drawable/ic_kitty_level45" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goog_to_gain"
                android:textColor="@color/dark"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_reward_kitty_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_level_to_gain"
            android:textColor="@color/dark"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_invite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_28"
            android:background="@drawable/activity_repertory_draw"
            android:gravity="center"
            android:text="@string/invite_friend"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/to_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginBottom="@dimen/dp_35"
            android:text="@string/get_progress_in_task"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</RelativeLayout>