<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ResourceName">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_top_round"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/activity_repertory_title"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_20">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:src="@drawable/dismiss_icon" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/activity_repertory_level"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_14"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/activity_repertory_name"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_14"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/activity_repertory_stored"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_14"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@color/color_DCDCDC" />

    <include
        layout="@layout/activity_repertory_empty_view"
        android:visibility="invisible" />

    <include
        layout="@layout/activity_repertory_list_view"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_30"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_repertory_expansion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/expansion_btn_back"
            android:gravity="center"
            android:text="@string/activity_repertory_expansion"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_17"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_repertory_draw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_weight="1"
            android:background="@drawable/activity_repertory_draw"
            android:gravity="center"
            android:text="@string/activity_repertory_draw"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            tools:ignore="SpUsage" />

    </LinearLayout>
</LinearLayout>