<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:br="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ResourceName">

    <include layout="@layout/title_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/color_fff4f4f4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wx_social_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/wx_code"
                android:textColor="@color/dark"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_wx_code"
            style="@style/editText_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/input_wx_code_hint"
            android:inputType="text"
            android:maxLength="20" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@color/color_ffdcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq_social_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/qq_code"
                android:textColor="@color/dark"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_qq_code"
            style="@style/editText_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/input_qq_code_hint"
            android:inputType="number"
            android:maxLength="20" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@color/color_ffdcdcdc" />

    <TextView
        android:id="@+id/set_social_info"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="@dimen/dp_7"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_7"
        android:background="@drawable/log_out_btn_back"
        android:gravity="center"
        android:text="@string/save_social"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17" />


</LinearLayout>